# dotpath

./: README.md  pyproject.toml
src/dotpath/: cli.py
