[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotpath-x"
version = "0.1.0"
description = "The Master Addressing Engine: A fully extensible, registration-based engine for data pathing."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alex Towell", email = "lex@metafunctor.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "PyYAML>=5.0"
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=2.0.0"]

[project.urls]
Homepage = "https://github.com/queelius/dotpath-x"

[project.scripts]
dotpath-x = "dotpath_x.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dotpath_x"]